--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethersproject/keccak256": "^5.7.0",
+    "@openzeppelin/merkle-tree": "^1.0.7",
     "fs": "0.0.1-security",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.11"
